fix z-index of sidebar

--- a/extension/src/index.css
+++ b/extension/src/index.css
@@ -30,8 +30,7 @@ body {
   display: flex;
   flex-direction: column;
   place-items: flex-start;
-  z-index: 4;
-
+  z-index: 200;
   transform: translateX(100%);
   transition: all 0.2s ease-in-out;
 
